--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -31,7 +31,7 @@ classDiagram
     }
     
     class RelaysController {
-        RelaysController relays
+        list~Relay~ relays
         __setitem__(int key, bool value)
     }
     
@@ -138,8 +138,8 @@ classDiagram
 classDiagram
 
     class SensorWorker {
-        dict~SensorType, Sensormanager~ managers 
-        Sensormanager current_manager 
+        dict~SensorType, SensorManager~ managers 
+        SensorManager current_manager 
         set_temperature(Number temperature)
         set_sensor(Sensor sensor)
     }
@@ -148,7 +148,7 @@ classDiagram
         moveToThread(QThread thread)
     }
     
-    class Sensormanager {
+    class SensorManager {
         <<interface>>
         set_sensor(Sensor sensor)
         set_temperature(Number temperature)
@@ -194,11 +194,11 @@ classDiagram
   
     QObject <|-- SensorWorker
     QThread o-- SensorWorker
-    SensorWorker o-- Sensormanager
-    Sensormanager <|.. UnifiedAnalogSignalManager
-    Sensormanager <|.. ResistanceThermometerManager
-    Sensormanager <|.. ThermocoupleManager
-    Sensormanager <|.. FakeManager
+    SensorWorker o-- SensorManager
+    SensorManager <|.. UnifiedAnalogSignalManager
+    SensorManager <|.. ResistanceThermometerManager
+    SensorManager <|.. ThermocoupleManager
+    SensorManager <|.. FakeManager
     ResistanceThermometerManager o-- RelaysController
     ResistanceThermometerManager *-- DataFrame
     ThermocoupleManager *-- DataFrame
@@ -277,7 +277,7 @@ classDiagram
     TRMParametersReadThread <|-- FakeTRMParametersReadThread 
 ```
 
-## Графики, расчёты
+## Симуляция температуры
 
 ```mermaid
 classDiagram
@@ -288,19 +288,10 @@ classDiagram
         float start_temperature
         float temperature
         float set_temperature
-        float interference_amplitude
-        float interference_frequency
         int direction
-        bool sinusoidal_interference_enabled
-        bool burst_interference_enabled
-        set_sinusoidal_interference_enabled(bool value)
-        set_burst_interference_enabled(bool value)
         set_set_temperature(float temperature)
-        set_interference_amplitude(float amplitude)
-        set_interference_frequency(float frequency)
+        set_interference_mode(InterferenceMode)
         calculate_temperature(float time) float
-        calculate_burst_interference(float time) float
-        calculate_sinusoidal_interference(float time) float
     }
     
     class LinearSolver {
@@ -310,31 +301,82 @@ classDiagram
         <<abstract>>
         int output
         set_output(int output)
+        calculate_control_signal(float time) float
     }
+    
+    class ReversedControlLogic {
+        calculate_control_signal(float time) float     
+    }
+
+    class DirectControlLogic {
+        calculate_control_signal(float time) float     
+    }
+    
+    class PShapedControlLogic {
+        calculate_control_signal(float time) float     
+    }
+    
+    class UShapedControlLogic {
+        calculate_control_signal(float time) float     
+    }
+    
+    class NoControlLogic {
+        calculate_control_signal(float time) float     
+    }
+    
+    class QThread {
+        run()
+    }
+
+    class InterferenceSolver {
+        <<abstract>>
+        float amplitude
+        float frequency
+        set_amplitude(float amplitude)
+        set_frequency(float frequency)
+        calculate_interference(float time) float
+    }
+    
+    class NoInterferenceSolver {
+        calculate_interference(float time) float
+    }
+
+    class SinusoidalInterferenceSolver {
+        calculate_interference(float time) float
+    }
+
+    class BurstInterferenceSolver {
+        calculate_interference(float time) float
+    }
+    
     class TemperatureCalculationThread {
         pyqtSignal~float~ temperature_signal
         Solver solver
         ControlLogic control_logic
+        InterferenceSolver interference
         float update_period
-        float
         bool reset
-        run()
         set_k_ratio(float k)
+        run()
         now()
         set_temperature(float new_set_temperature)
+        set_control_logic(int code)
     }
     
     
     QThread <|-- TemperatureCalculationThread
     TemperatureCalculationThread o-- Solver
     TemperatureCalculationThread o-- ControlLogic
+    TemperatureCalculationThread o-- InterferenceSolver
     Solver <|-- LinearSolver
     ControlLogic <|-- ReversedControlLogic
     ControlLogic <|-- DirectControlLogic
     ControlLogic <|-- PShapedControlLogic
     ControlLogic <|-- UShapedControlLogic
     ControlLogic <|-- NoControlLogic
-    TRMParametersReadThread <-- ControlLogic
+    InterferenceSolver <|-- NoInterferenceSolver
+    InterferenceSolver <|-- SinusoidalInterferenceSolver
+    InterferenceSolver <|-- BurstInterferenceSolver
 ```
 
 ## Взаимодействие с БД
@@ -451,17 +493,17 @@ classDiagram
         pyqtSignal~float~ valueChanged
     } 
     
-    class QCheckBox {
-        pyqtSignal~int~ stateChanged
-    }
-    
     class QComboBox {
         pyqtSignal~str~ currentTextChanged
         addItems(Iterable~str~)
         setCurrentText(~str~)
     }
     
-        class CurveManager {
+    class InterferenceModesComboBox {
+        pyqtSignal~InterferenceMode~ mode_changed
+    }
+    
+    class CurveManager {
         PlotDataItem curve
         deque~float~ values
         deque~float~ times
@@ -493,24 +535,22 @@ classDiagram
     QObject <|-- QApplication 
     QObject <|-- QWidget
     QWidget <|-- QAbstractSpinBox
-    QWidget <|-- QCheckBox
     QWidget <|-- QTableWidget
     QWidget <|-- QComboBox
     QComboBox <|-- SensorsComboBox
+    QComboBox <|-- InterferenceModesComboBox
     QTableWidget <|-- CharacteristicsTableWidget
     QTableWidget <|-- SensorInfoTable
     QTableWidget <|-- TRMParametersInfoTable
-    TRMParametersReadThread <-- TRMParametersInfoTable
     QAbstractSpinBox <|-- QDoubleSpinBox
     QAbstractSpinBox <|-- QSpinBox
     QWidget <|-- PlotWidget
     TemperaturePlotManager o-- PlotWidget
     TemperaturePlotManager *-- CurveManager
-    TRMParametersReadThread <-- TemperaturePlotManager
     CurveManager o-- PlotDataItem
 ```
 
-## Связь элементов интерфейса с программой
+## Связь элементов интерфейса с программой (сигналы и слоты)
 
 ```mermaid
 classDiagram
@@ -535,31 +575,31 @@ classDiagram
         update_info()
     }
 
+    class InterferenceModesComboBox {
+        pyqtSignal mode_changed
+    }
+
     class QCheckBox {
         pyqtSignal stateChanged
     }
     
-    class Solver {
-        set_interference_frequency()
-        set_interference_amplitude()
-    }
-    
     class TemperatureCalculationThread {
         pyqtSignal temperature_signal
-        float update_period
         set_k_ratio()
         set_temperature()
+        set_interference_mode()
+        set_control_logic()
     }
     
     class TRMParametersInfoTable {
         update_info()
     }
     
-    
     class TRMParametersReadThread {
         pyqtSignal parameters_signal
         pyqtSignal temperature_signal
         pyqtSignal output_signal
+        pyqtSignal control_logic_singal
     }
     
     class TemperaturePlotManager {
@@ -574,12 +614,11 @@ classDiagram
     QSpinBox <-- SensorsInfoTable
     QCheckBox <-- SensorWorker
     SensorsComboBox <-- SensorWorker
-    TemperatureCalculationThread <-- SensorWorker
-    QSpinBox <-- Solver
     QSpinBox <-- TemperatureCalculationThread
-    QCheckBox <-- Solver
     TemperatureCalculationThread <-- TemperaturePlotManager
+    TemperatureCalculationThread <-- SensorWorker
     TRMParametersReadThread <-- TemperaturePlotManager
     TRMParametersReadThread <-- TRMParametersInfoTable
-
+    TRMParametersReadThread <-- TemperatureCalculationThread
+    InterferenceModesComboBox <-- TemperatureCalculationThread
 ```
