--- a/data/diagrams/алгоритмы.md
+++ b/data/diagrams/алгоритмы.md
@@ -95,7 +95,7 @@ flowchart
     End(["Завершение программы"])
 ```
 
-## Алгоритм расчета таблицы для симуляции термометра сопротивления
+# Алгоритм расчета таблицы для симуляции термометра сопротивления
 
 ```mermaid
 flowchart
@@ -127,7 +127,26 @@ flowchart
     End([return df])
 ```
 
-## Алгоритм нахождения ближайшего значения к `value` в массиве `values`
+# Алгоритм расчета таблицы для симуляции термопары
+
+```mermaid
+flowchart
+    Start(["Начало"]) --> A
+    A["Получить на вход sensor_characteristic, 
+    simulation_range, mcp_data"] --> B
+    B["min_temp, max_temp = simulation_range"] --> C
+    C["Инициализировать df = pd.DataFrame()"] --> D
+    D["Рассчитать промежуточный диапазон range_1 = range(min_temp, max_temp + 1)"] --> E
+    E["Рассчитать срез датафрейма sensors_characteristics_1 = sensor_characteristics.index.isin(range_1)"] --> F
+    F["df['voltage'] = sensors_characteristics_1['value']"]  --> G 
+    G["df['calc'] = df['voltage'].apply(lambda x: int(math.copysign(1, x)) * find_nearest(mcp_data['divided_voltage (mV)'], abs(x)),)"] --> H
+    H["df['error'] = abs(df['voltage'] - df['calc'])"] --> I
+    I["df['code'] = df['calc'].apply(lambda x: int(mcp_data[mcp_data['divided_voltage (mV)'] == abs(x)].iloc[0]['code']))"] --> J
+    J["return df"] --> End
+    End(["Конец"])
+```
+
+# Алгоритм нахождения ближайшего значения к `value` в массиве `values`
 
 ```mermaid
 flowchart
