--- a/src/notebooks/Характеристика mcp4725.ipynb
+++ b/src/notebooks/Характеристика mcp4725.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "b852112e",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import math\n",
     "# patching\n",
     "import sys\n",
     "from pathlib import Path\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "36d1f7fc",
    "metadata": {},
    "outputs": [
@@ -412,48 +412,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000</td>\n",
+       "      <th>-210</th>\n",
+       "      <td>-8.095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.050</td>\n",
+       "      <th>-209</th>\n",
+       "      <td>-8.076</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.101</td>\n",
+       "      <th>-208</th>\n",
+       "      <td>-8.057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.151</td>\n",
+       "      <th>-207</th>\n",
+       "      <td>-8.037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.303</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0.507</td>\n",
+       "      <th>-206</th>\n",
+       "      <td>-8.017</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -462,31 +438,25 @@
       "text/plain": [
        "      value\n",
        "temp       \n",
-       "0     0.000\n",
-       "1     0.050\n",
-       "2     0.101\n",
-       "3     0.151\n",
-       "4     0.202\n",
-       "5     0.253\n",
-       "6     0.303\n",
-       "7     0.354\n",
-       "8     0.405\n",
-       "9     0.456\n",
-       "10    0.507"
+       "-210 -8.095\n",
+       "-209 -8.076\n",
+       "-208 -8.057\n",
+       "-207 -8.037\n",
+       "-206 -8.017"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensor_characteristics.loc[0:10]"
+    "sensor_characteristics.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "0271a24b",
    "metadata": {},
    "outputs": [],
@@ -496,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "b73589f9",
    "metadata": {},
    "outputs": [
@@ -534,7 +504,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,17 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "104d3f56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_temp, max_temp = 0, 100"
+    "min_temp, max_temp = -50, 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "205b35b3",
    "metadata": {},
    "outputs": [],
@@ -566,17 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "008d9e27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "-2.431"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "dfea326d",
    "metadata": {},
    "outputs": [
@@ -597,7 +567,7 @@
        "5.269"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "cebb7375",
    "metadata": {},
    "outputs": [],
@@ -618,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "0ec3c92a",
    "metadata": {
     "scrolled": true
@@ -654,44 +624,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000</td>\n",
+       "      <th>-50</th>\n",
+       "      <td>-2.431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.050</td>\n",
+       "      <th>-49</th>\n",
+       "      <td>-2.385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.101</td>\n",
+       "      <th>-48</th>\n",
+       "      <td>-2.338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.151</td>\n",
+       "      <th>-47</th>\n",
+       "      <td>-2.291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.202</td>\n",
+       "      <th>-46</th>\n",
+       "      <td>-2.244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.253</td>\n",
+       "      <th>-45</th>\n",
+       "      <td>-2.197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.303</td>\n",
+       "      <th>-44</th>\n",
+       "      <td>-2.150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.354</td>\n",
+       "      <th>-43</th>\n",
+       "      <td>-2.103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.405</td>\n",
+       "      <th>-42</th>\n",
+       "      <td>-2.055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.456</td>\n",
+       "      <th>-41</th>\n",
+       "      <td>-2.008</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -700,19 +670,19 @@
       "text/plain": [
        "      voltage\n",
        "temp         \n",
-       "0       0.000\n",
-       "1       0.050\n",
-       "2       0.101\n",
-       "3       0.151\n",
-       "4       0.202\n",
-       "5       0.253\n",
-       "6       0.303\n",
-       "7       0.354\n",
-       "8       0.405\n",
-       "9       0.456"
+       "-50    -2.431\n",
+       "-49    -2.385\n",
+       "-48    -2.338\n",
+       "-47    -2.291\n",
+       "-46    -2.244\n",
+       "-45    -2.197\n",
+       "-44    -2.150\n",
+       "-43    -2.103\n",
+       "-42    -2.055\n",
+       "-41    -2.008"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "f5607bfe",
    "metadata": {},
    "outputs": [],
@@ -733,47 +703,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "a20a4c13",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5.188476562500001,\n",
-       " 5.196533203125,\n",
-       " 5.20458984375,\n",
-       " 5.212646484375,\n",
-       " 5.220703125,\n",
-       " 5.228759765625,\n",
-       " 5.23681640625,\n",
-       " 5.244873046875,\n",
-       " 5.2529296875,\n",
-       " 5.260986328125]"
+       "[0.008056640625,\n",
+       " 0.01611328125,\n",
+       " 0.024169921874999997,\n",
+       " 0.0322265625,\n",
+       " 0.040283203125,\n",
+       " 0.04833984375,\n",
+       " 0.05639648437499999,\n",
+       " 0.064453125,\n",
+       " 0.072509765625,\n",
+       " 0.08056640625]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_simulation_range[-10:]"
+    "_simulation_range[0:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "b5a879c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"calc\"] = df[\"voltage\"].apply(lambda x: find_nearest(_simulation_range, x))"
+    "df[\"calc\"] = df[\"voltage\"].apply(lambda x: round(math.copysign(1, x) * find_nearest(_simulation_range, abs(x)), 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "9a06bdcc",
    "metadata": {},
    "outputs": [
@@ -809,114 +779,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.008057</td>\n",
+       "      <th>-50</th>\n",
+       "      <td>-2.431</td>\n",
+       "      <td>-2.43311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.050</td>\n",
-       "      <td>0.048340</td>\n",
+       "      <th>-49</th>\n",
+       "      <td>-2.385</td>\n",
+       "      <td>-2.38477</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.101</td>\n",
-       "      <td>0.104736</td>\n",
+       "      <th>-48</th>\n",
+       "      <td>-2.338</td>\n",
+       "      <td>-2.33643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.151</td>\n",
-       "      <td>0.153076</td>\n",
+       "      <th>-47</th>\n",
+       "      <td>-2.291</td>\n",
+       "      <td>-2.28809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.202</td>\n",
-       "      <td>0.201416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>5.052</td>\n",
-       "      <td>5.051514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>5.106</td>\n",
-       "      <td>5.107910</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>5.160</td>\n",
-       "      <td>5.156250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>5.215</td>\n",
-       "      <td>5.212646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>5.269</td>\n",
-       "      <td>5.260986</td>\n",
+       "      <th>-46</th>\n",
+       "      <td>-2.244</td>\n",
+       "      <td>-2.24780</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>101 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      voltage      calc\n",
-       "temp                   \n",
-       "0       0.000  0.008057\n",
-       "1       0.050  0.048340\n",
-       "2       0.101  0.104736\n",
-       "3       0.151  0.153076\n",
-       "4       0.202  0.201416\n",
-       "...       ...       ...\n",
-       "96      5.052  5.051514\n",
-       "97      5.106  5.107910\n",
-       "98      5.160  5.156250\n",
-       "99      5.215  5.212646\n",
-       "100     5.269  5.260986\n",
-       "\n",
-       "[101 rows x 2 columns]"
+       "      voltage     calc\n",
+       "temp                  \n",
+       "-50    -2.431 -2.43311\n",
+       "-49    -2.385 -2.38477\n",
+       "-48    -2.338 -2.33643\n",
+       "-47    -2.291 -2.28809\n",
+       "-46    -2.244 -2.24780"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "032a62da",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Int64Index([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,\n",
-       "            ...\n",
-       "             91,  92,  93,  94,  95,  96,  97,  98,  99, 100],\n",
-       "           dtype='int64', name='temp', length=101)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'te'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\users\\fmark\\pycharmprojects\\dissertation\\venv\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\users\\fmark\\pycharmprojects\\dissertation\\venv\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\users\\fmark\\pycharmprojects\\dissertation\\venv\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'te'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcode\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf_mcp_4725\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mte\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: df_mcp_4725[df_mcp_4725[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdivided_voltage (mV)\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[x][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcalc\u001b[39m\u001b[38;5;124m\"\u001b[39m]][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcode\u001b[39m\u001b[38;5;124m\"\u001b[39m], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[1;32mc:\\users\\fmark\\pycharmprojects\\dissertation\\venv\\lib\\site-packages\\pandas\\core\\frame.py:3506\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3504\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3505\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3506\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3507\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3508\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\users\\fmark\\pycharmprojects\\dissertation\\venv\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'te'"
+     ]
     }
    ],
    "source": [
-    "df[\"code\"] = df_mcp_4725[\"te\"].apply(lambda x: df_mcp_4725[df_mcp_4725[\"divided_voltage (mV)\"] == df.iloc[x][\"calc\"]][\"code\"], axis=0)"
+    "df[\"code\"] = df_mcp_4725[\"v\"].apply(lambda x: df_mcp_4725[df_mcp_4725[\"divided_voltage (mV)\"] == df.iloc[x][\"calc\"]][\"code\"], axis=0)"
    ]
   },
   {
