--- a/data/diagrams/диаграммы последовательностей.md
+++ b/data/diagrams/диаграммы последовательностей.md
@@ -68,6 +68,8 @@ sequenceDiagram
     participant TemperaturePlotManager
     participant TemperatureCalculationThread
     participant Solver
+    participant InterferenceSolver
+    participant ControlLogic
     participant SensorManager
     participant Device
     participant Интерфейсная плата
@@ -75,7 +77,12 @@ sequenceDiagram
 
     loop
         TemperatureCalculationThread ->> Solver : запросить рассчитанную температуру
-        Solver -->> TemperatureCalculationThread : вернуть рассчитанную температуру 
+        Solver -->> TemperatureCalculationThread : вернуть рассчитанную температуру
+        TemperatureCalculationThread ->> InterferenceSolver : запросить величину помех
+        InterferenceSolver -->> TemperatureCalculationThread : вернуть величину помех
+        TemperatureCalculationThread ->> ControlLogic : запросить управляющий сигнал
+        ControlLogic -->> TemperatureCalculationThread : вернуть управляющий сигнал
+        TemperatureCalculationThread ->> TemperatureCalculationThread : рассчитать результирующую температуру
         TemperatureCalculationThread ->> TemperaturePlotManager : отобразить температуру
         TemperaturePlotManager ->> Пользователь : обновить график
         TemperatureCalculationThread ->> SensorManager : установить рассчитанную температуру
