--- a/data/diagrams/алгоритмы.md
+++ b/data/diagrams/алгоритмы.md
@@ -100,31 +100,74 @@ flowchart
 ```mermaid
 flowchart
     Start(["Начало"]) --> A
-    A["Передать sensor_characteristics, simulation_range,
-     digipot1_data, digipot2_data"] --> B
-    B["Инициализировать словарь possible_values = {}"] --> C
-    C{"r1 - последний элемент 
-    digipot1_data?"} -->|"Нет"| D
-    C --> |"Да"| G
-    D{"r2 - последний элемент 
-    digipot2_data?"} -->|"Нет"| E
-    D -->|"Да"| C
-    E["possible_value = round((r1['resistance'] * r2['resistance']) / (r1['resistance'] + r2['resistance']), 5)"] --> F
-    F["possible_values[possible_value] = [int(r1['code']), int(r2['code'])]"] --> D
+    A["Получить характеристику датчика sensor_characteristics, 
+    диапазон симулируемых температур simulation_range,
+    характеристики цифровых резисторов digipot1_data, digipot2_data"] --> B
+    B["Инициализировать словарь possible_values = {}"] --> C1
+    C1{"digipot1_data имеет 
+    оставшиеся значения?"} -->|"Да"| D1
+    D1["Получить следующее значение для r1 из digipot1_data"] --> D2
+    C1 --> |"Нет"| G
+    D2{"digipot2_data имеет 
+    оставшиеся значения?"} -->|"Да"| E1
+    E1["Получить следующее значение для r2 из digipot2_data"] --> E2
+    D2 -->|"Нет"| C1
+    E2["Рассчитать possible_value = round((r1['resistance'] * r2['resistance']) / (r1['resistance'] + r2['resistance']), 5)"] --> E3
+    E3["Рассчитать массив codes = [int(r1['code']), int(r2['code'])]"] --> F
+    F["Добавить массив codes в possible_values по ключу possible_value"] --> D2
     G["min_temp, max_temp = simulation_range"] --> H
-    H["min_value = sensor_characteristics.loc[min_temp]['value']"] --> I
-    I["max_value = sensor_characteristics.loc[max_temp]['value']"] --> J
-    J["Инициализировать датафрейм df = pd.DataFrame()"] --> K
-    K["df['R'] = sensor_characteristics[sensor_characteristics.index.isin(range(min_temp, max_temp + 1))]['value']"] --> L
-    L["df['calc'] = df['R'].apply(lambda x: find_nearest(_simulation_range, x))"] --> M
-    M["df['error'] = abs(df['R'] - df['calc'])"] --> N
-    N["df['code'] = df['calc'].apply(lambda x: possible_values[x])"] --> O
-    O["df['R1_code'] = df['code'].apply(lambda x: x[0])"] --> P
-    P["df['R2_code'] = df['code'].apply(lambda x: x[1])"] --> Q
-    Q["df['R1'] = df['R1_code'].apply(lambda x: digipot1_data[digipot1_data['code'] == x].iloc[0]['resistance'])"] --> R
-    R["df['R2'] = df['R2_code'].apply(lambda x: digipot2_data[digipot2_data['code'] == x].iloc[0]['resistance'])"] --> S
-    S["del df['code']"] --> End
-    End([return df])
+    H["Получить значение min_value по индексу min_temp из sensor_characteristics по ключу 'value'"] --> I
+    I["Получить значение max_value по индексу max_temp из sensor_characteristics по ключу 'value'"] --> J
+    J["Инициализировать массив simulated_values"] --> J1
+    J1{"ключи possible_values содержит 
+    оставшиеся значения?"} -->|"Да"| J2
+    J1 --> |"Нет"| J10
+    J2["Получить следующее значение для
+     value из ключей possible_values"] --> J3
+    J3{"value больше min_value 
+    и меньше max_value?"} -->|"Да"| J4
+    J3 -->|"Нет"| J1
+    J4["Добавить value в массив simulated_values"] --> J1
+    J10["Инициализировать датафрейм df = pd.DataFrame()"] --> K1
+    K1["Инициализировать последовательность range_1 
+    от min_temp до max_temp включительно"] --> K2
+    K2{"sensor_characteristics имеет 
+    оставшиеся значения?"} -->|"Да"| K3
+    K2 -->|"Нет"| L
+    K3["Получить следующее значение для row из sensor_characteristics"] --> K4
+    K4{"range_1 содержит 
+    row.index?"} -->|"Да"| K5
+    K4 -->|"Нет"| K2
+    K5["Добавить row['value'] в столбец df['R']"] --> K2
+    L{"Столбец df['R'] содержит 
+    оставшиеся значения?"} -->|"Да"| L2
+    L -->|"Нет"| M
+    L2["Получить следующее значение для x из столбца df['R']"] --> L3
+    L3[["Рассчитать r = find_nearest(simulation_range, x)"]] --> L4
+    L4["Добавить r в столбец df['calc']"] --> L
+    M{"Столбец df['calc'] имеет
+     оставшиеся значения?"} -->|"Да"| M1
+    M --> |"Нет"| Q
+    M1["Получить следующее значение для x из столбца df['calc']"] --> M2
+    M2["Получить значение codes по ключу x из словаря possible_values"] --> M3
+    M3["Добавить значение x[0] в стоблец df['R1_code']"] --> M4
+    M4["Добавить значение x[1] в стоблец df['R2_code']"] --> M
+    Q{"Столбец df['R1_code'] имеет 
+    оставшиеся значения?"} -->|"Да"| Q1
+    Q -->|"Нет"| R
+    Q1["Получить следующее значение для code 
+    из столбца df['R1_code']"]--> Q2
+    Q2["Получить значение r из столбца digipot1_data['code'] по значению code"] --> Q3
+    Q3["Добавить r в столбец df['R1']"] --> Q
+    R{"Столбец df['R2_code'] имеет 
+    оставшиеся значения?"} -->|"Да"| R1
+    R -->|"Нет"| S
+    R1["Получить следующее значение для code 
+    из столбца df['R2_code']"]--> R2
+    R2["Получить значение r из столбца digipot2_data['code'] по значению code"] --> R3
+    R3["Добавить r в столбец df['R2']"] --> Q
+    S["Удалить столбец df['codes']"] --> End
+    End(["Вернуть датафрейм df"])
 ```
 
 # Алгоритм расчета таблицы для симуляции термопары
@@ -132,14 +175,14 @@ flowchart
 ```mermaid
 flowchart
     Start(["Начало"]) --> A
-    A["Получить на вход sensor_characteristic, 
-    simulation_range, mcp_data"] --> B
+    A["Получить на вход характеристику датчика sensor_characteristic, 
+    диапазон симулируемых температур simulation_range, характеристику ЦАП mcp_data"] --> B
     B["min_temp, max_temp = simulation_range"] --> C
-    C["Инициализировать df = pd.DataFrame()"] --> D
+    C["Инициализировать датафрейм df"] --> D
     D["Рассчитать промежуточный диапазон range_1 = range(min_temp, max_temp + 1)"] --> E
     E["Рассчитать срез датафрейма sensors_characteristics_1 = sensor_characteristics.index.isin(range_1)"] --> F
-    F["df['voltage'] = sensors_characteristics_1['value']"]  --> G 
-    G["df['calc'] = df['voltage'].apply(lambda x: int(math.copysign(1, x)) * find_nearest(mcp_data['divided_voltage (mV)'], abs(x)),)"] --> H
+    F["Записать столбец df['voltage'] = sensors_characteristics_1['value']"]  --> G 
+    G["Записать столбец df['calc'] = df['voltage'].apply(lambda x: int(math.copysign(1, x)) * find_nearest(mcp_data['divided_voltage (mV)'], abs(x)),)"] --> H
     H["df['error'] = abs(df['voltage'] - df['calc'])"] --> I
     I["df['code'] = df['calc'].apply(lambda x: int(mcp_data[mcp_data['divided_voltage (mV)'] == abs(x)].iloc[0]['code']))"] --> J
     J["return df"] --> End
@@ -151,11 +194,21 @@ flowchart
 ```mermaid
 flowchart
     Start(["Начало"]) --> A
-    A["Получить на вход values, value"] --> B
-    B["array = np.asarray(values)"] --> C
-    C["Рассчитать массив array1 = array - value"] --> D
-    D["Рассчитать массив array2 = np.abs(array1)"] --> E
-    E["Найти индекс минимального числа idx = array2.argmin()"] --> F
-    F["return array[idx]"] --> End
+    A["Получить на вход итерируемый объект values, значение value"] --> B1
+    B1["Инициализировать массив array"] --> B2
+    B2{"values содержит 
+    оставшиеся значения?"} -->|"Да"| B3
+    B2 -->|"нет"| C
+    B3["Получить следующее значение для v из values"] --> B4
+    B4["Добавить v в массив array"] --> B2
+    C["Инициализировать массив array1"] --> C1
+    C1{"Массив array содержит
+     оставшиеся значения?"} -->|"Да"| C2
+    C1 --> |"Нет"| D
+    C2["Получить следующее 
+    значение для i из array"] --> C3
+    C3["Добавить в array1 модуль значения (i - value)"] --> C1
+    D[["Найти индекс минимального числа i = array1.argmin()"]] --> F
+    F["Вернуть i-ый элемент массива array"] --> End
     End(["Конец"])
 ```
