--- a/data/diagrams/алгоритмы.md
+++ b/data/diagrams/алгоритмы.md
@@ -175,17 +175,37 @@ flowchart
 ```mermaid
 flowchart
     Start(["Начало"]) --> A
-    A["Получить на вход характеристику датчика sensor_characteristic, 
-    диапазон симулируемых температур simulation_range, характеристику ЦАП mcp_data"] --> B
+    A["Получить на вход таблицу с характеристикой датчика sensor_characteristic, 
+    диапазон симулируемых температур simulation_range,
+     таблицу с характеристикой ЦАП mcp_data"] --> B
     B["min_temp, max_temp = simulation_range"] --> C
     C["Инициализировать датафрейм df"] --> D
-    D["Рассчитать промежуточный диапазон range_1 = range(min_temp, max_temp + 1)"] --> E
-    E["Рассчитать срез датафрейма sensors_characteristics_1 = sensor_characteristics.index.isin(range_1)"] --> F
-    F["Записать столбец df['voltage'] = sensors_characteristics_1['value']"]  --> G 
-    G["Записать столбец df['calc'] = df['voltage'].apply(lambda x: int(math.copysign(1, x)) * find_nearest(mcp_data['divided_voltage (mV)'], abs(x)),)"] --> H
-    H["df['error'] = abs(df['voltage'] - df['calc'])"] --> I
-    I["df['code'] = df['calc'].apply(lambda x: int(mcp_data[mcp_data['divided_voltage (mV)'] == abs(x)].iloc[0]['code']))"] --> J
-    J["return df"] --> End
+    D["Рассчитать последовательность range_1 от min_temp до max_temp включительно"] --> E
+    E{"sensor_characteristics 
+    имеет оставшиеся значения?"} -->|"Да"| E1
+    E -->|"Нет"| F
+    E1["Получить следующее значения для row из sensor_characteristics"] --> E2
+    E2{"range_1 содержит 
+    row.index?"} -->|"Да"| E3
+    E2 -->|"Нет"| E
+    E3["Добавить row['value'] в столбец df['voltage']"] --> F
+    F{"Столбец df['voltage']
+     имеет оставшиеся значения?"} -->|"Да"| F1
+    F -->|"Нет"| I
+    F1["Получить следующее значение для voltage из столбца df['voltage']"] --> F2
+    F2["Рассчитать модуль voltage_abs = |voltage|"] --> F3
+    F3[["Рассчитать nearest = find_nearest(mcp_data['divided_voltage'], voltage_abs)"]] --> F4
+    F4[["Получить знак значения voltage: sign = int(math.copysign(1, voltage))"]] --> F5
+    F5["Рассчитать nearest_1 =  sign * nearest"] --> F6
+    F6["Добавить nearest_1 в столбец df['calc']"] --> F
+    I{"Столбец df['calc'] 
+    имеет оставшиеся значения?"} -->|"Да"| I1
+    I --> |"Нет"| J
+    I1["Получить следующее значение для voltage из столбца df['calc']"] --> I2
+    I2["Рассчитать модуль voltage_abs = |voltage|"] --> I3
+    I3["Получить значение code из столбца mcp_data['divided_voltage'] по значению voltage_abs"] --> I4
+    I4["Добавить code в столбец df['code']"] --> I
+    J["Вернуть датафрейм df"] --> End
     End(["Конец"])
 ```
 
