--- a/data/diagrams/алгоритмы.md
+++ b/data/diagrams/алгоритмы.md
@@ -2,18 +2,19 @@
 
 ```mermaid
 flowchart
-    Start(["Начало программы"]) --> A0
-    subgraph "Инициализация"
-        A0["Открытие соединения с БД"] --> A1
-        A1["Чтение списка датчиков из БД"] --> A2
-        A2["Инициализация шины SPI"] --> A3
-        A3["Инициализация шины I2C"] --> A4
-        A4["Инициализация последовательного порта"] --> A5
-        A5["Инициализация GPIO портов"] --> A6
-        A6["Создание потоков для 
-        параллельного выполнения программы"] --> A7
-    end
-    A7["Инициализация интерфейса"] --> B1
+    Start(["Начало программы"]) --> A
+
+    Init(("Инициализация")) --> A0
+    A0["Открытие соединения с БД"] --> A1
+    A1["Чтение списка датчиков из БД"] --> A2
+    A2["Инициализация шины SPI"] --> A3
+    A3["Инициализация шины I2C"] --> A4
+    A4["Инициализация последовательного порта"] --> A5
+    A5["Инициализация GPIO портов"] --> A6
+    A6["Создание потоков для 
+    параллельного выполнения программы"]
+
+    A[["Инициализация интерфейса"]] --> B1
     B1[/"Задание скорости изменения температуры"/] --> B2
     B2[/"Задание температуры окружающей среды"/] --> B3
     B3[/"Задание режима помех"/] --> B
@@ -48,20 +49,22 @@ flowchart
     I1["Отображение считанных параметров ТРМ"] --> I2
     I2["Перерисовка графика изменения температуры"] --> J
     J{"Пользователь закрыл 
-    программу?"} -->|"Да"| K1
+    программу?"} -->|"Да"| K
     J -->|"Нет"| L
     L{"Пользователь выбрал 
     другой датчик 
     для симуляции?"} -->|"Да"| C1
     L -->|"Нет"| F
-    subgraph "Деинициализация"
-        K1["Закрытие соединения с БД"] --> K2
-        K2["Закрытие последовательного порта"] --> K3
-        K3["Деинициализация GPIO портов"] --> K4
-        K4["Деинициализация шины SPI"] --> K5
-        K5["Деинициализация шины I2C"] --> K6
-    end
-    K6["Остановка и удаление потоков"] --> End
+
+    Deinit(("Деинициализация")) --> K1
+    K1["Закрытие соединения с БД"] --> K2
+    K2["Закрытие последовательного порта"] --> K3
+    K3["Деинициализация GPIO портов"] --> K4
+    K4["Деинициализация шины SPI"] --> K5
+    K5["Деинициализация шины I2C"]
+
+    K[["Деинициализация"]] --> End
+
     End(["Завершение программы"])
 ```
 
@@ -70,28 +73,23 @@ flowchart
 ```mermaid
 flowchart
     Start(["Запуск программы"]) --> A
-    A["Инициализация модулей программы,
-    инициализация шин протоколов,
-    чтение данных из БД"] --> B1
-    B1["Отображение интерфейса - графиков, 
-    таблиц, меню выборов параметров"] --> B2 
-    B2[/"Пользователь выбирает заданную температуру, 
-    режим помех, датчик для симуляции"/] --> C
+    A[["Инициализация необходимых ресурсов"]] --> B1
+    B1["Загрузка интерфейса"] --> B2 
+    B2[/"Пользователь выбирает параметры симуляции,
+     датчик для симуляции"/] --> C
     C["Отображание характеристики датчика"] --> D
     D["Переключение реле, выбор 
     соответствующего модуля управления"] --> E
-    E["Расчет температуры"] --> F
-    F["Расчет кода для отправки модулю управления"]  --> G
+    E["Расчет симулируемой температуры"] --> F
+    F["Выбор кода по таблице"]  --> G
     G["Отправка кода устройству, симулирующему датчик"] --> H
-    H["Чтение параметров ТРМ"] --> I
+    H["Чтение параметров ТРМ сделать параллельно"] --> I
     I["Отображение параметров ТРМ"] --> J
     J["Перерисовка графика изменения температуры"] --> K
     K{"Пользователь закрыл 
     программу?"} -->|"Нет"| E
     K -->|"Да"| Z     
-    Z["Деинициализация модулей программы,
-    деинициализация шин протоколов,
-    закрытие соединения с БД"] --> End
+    Z[["Освобождение ресурсов"]] --> End
     End(["Завершение программы"])
 ```
 
