--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -57,7 +57,7 @@ classDiagram
         write(bytes buf, int start, int end)
     }
     
-    class SPIDevice{
+    class SPIDevice {
         SPI spi
         int baudrate
         int polarity
@@ -148,6 +148,22 @@ classDiagram
         moveToThread(QThread thread)
     }
     
+    class QThread {
+        run()
+    }
+    
+    class RelaysController {
+        __setitem__(int key, bool value)
+    }
+    
+    class MCP4725 {
+        send_code()
+    }
+
+    class AD8400 {
+        send_code()
+    }
+    
     class SensorManager {
         <<interface>>
         set_sensor(Sensor sensor)
@@ -191,7 +207,11 @@ classDiagram
         set_temperature(Number temperature)
         select()
     }
-  
+
+    class DataFrame {
+        iloc(index) Series
+    }
+
     QObject <|-- SensorWorker
     QThread o-- SensorWorker
     SensorWorker o-- SensorManager
@@ -206,7 +226,8 @@ classDiagram
     ThermocoupleManager o-- RelaysController
     UnifiedAnalogSignalManager o-- MCP4725
     UnifiedAnalogSignalManager o-- RelaysController
-    ResistanceThermometerManager o-- AD8400
+    UnifiedAnalogSignalManager *-- DataFrame
+    ResistanceThermometerManager "1" o-- "many" AD8400
 ```
 
 ## Протокол Овен
