--- a/data/diagrams/диаграммы последовательностей.md
+++ b/data/diagrams/диаграммы последовательностей.md
@@ -13,14 +13,21 @@ sequenceDiagram
     Пользователь ->> Программа: Выбрать датчик
     Программа ->> БД: Запросить характеристику датчика
     БД -->> Программа: Вернуть характеристику датчика
-    Программа -->> Пользователь: Отобразить характеристику датчика
-    Программа ->> Плата: Переключить реле
-    Плата -->> Программа : Реле переключены
+    par
+        Программа -->> Пользователь: Отобразить характеристику датчика
+    and 
+        Программа ->> Плата: Переключить реле
+        Плата -->> Программа : Реле переключены
+    end
     loop Несколько раз в секунду
         par Симуляция сигнала датчика
             Программа ->> Программа: Расcчитать температуру
             Программа ->> Плата: Выработать сигнал
             Плата -->> Программа: Сигнал выработан
+        and Измерение сигнала датчика
+            ТРМ ->> Плата: Измерить величину
+            Плата -->> ТРМ: Выработать сигнал
+            ТРМ ->> ТРМ: Обработать сигнал
         and Опрос параметров и их отображение
             Программа ->> ТРМ: Опросить параметры ТРМ-а
             ТРМ -->> Программа: Вернуть запрошенные параметры
